[tool.poetry]
name = "ds-robotframework"
version = "0.1.0"
description = "My experiments with RobotFramework"
authors = ["dhilipsiva <dhilipsiva@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.27.0"
flake8 = "^3.9.2"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
